--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -15,11 +15,8 @@ html,body{
   font-weight: 800;
   outline: none;
   text-transform: uppercase;
-  background: linear-gradient( 135deg , #0eae57 0%, #0c7475 50%, #0eae57 100%);
   background-size: 400%;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; 
-  animation: animate 10s linear infinite;
+color: black; 
     text-align: center !important;
 }
 @keyframes animate {
