--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -15,8 +15,11 @@ html,body{
   font-weight: 800;
   outline: none;
   text-transform: uppercase;
+  background: linear-gradient(135deg, #5335cf 0%, #de005e 25%, #f66e48 50%, #de005e 75%, #5335cf 100%);
   background-size: 400%;
-color: black; 
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; 
+  animation: animate 10s linear infinite;
     text-align: center !important;
 }
 @keyframes animate {
