--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -11,6 +11,7 @@ html,body{
   /* background: #000; */
 }
 .text{
+  font-family: FC35542;
   font-size: 150px;
   font-weight: 800;
   outline: none;
