--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -15,7 +15,7 @@ html,body{
   font-size: 200px;
   outline: none;
   text-transform: uppercase;
-  background: linear-gradient(135deg, #5335cf 0%, #de005e 25%, #f66e48 50%, #de005e 75%, #5335cf 100%);
+  background: linear-gradient(360deg, #f2994a 0%, #F2C94C 100%);
   background-size: 400%;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent; 
