--- a/Styles/dark-mode.css
+++ b/Styles/dark-mode.css
@@ -1,6 +1,9 @@
 [data-theme="dark"] .navbar-light .navbar-toggler-icon {
     background-image: url(../Styles/Untitled-2.png);
 }
+[data-theme="dark"] a.text-dark:focus, a.text-dark:hover {
+    color: #dbdbdb!important;
+}
 [data-theme="dark"] .navbar-light .navbar-toggler {
     color: rgb(255 255 255 / 50%);
     border-color: rgb(255 255 255);
@@ -35,7 +38,4 @@ color: #ffffff;
 }
 [data-theme="dark"] .navbar-light .navbar-nav .nav-link.disabled {
     color: rgb(255 255 255 / 30%)!important;
-}
-[data-theme="dark"] a.text-dark:hover { 
-    color: #dbdbdb!important; 
 }
